@@ -43,3 +43,5 @@ NJ - 13/11/04 - README fixed up.
 NJ - 13/11/04 - Added svn:ignore *.pyc because we don't need to import compiled python modules into the repo)
 NJ - 13/11/04 - Found a problem with all the commands, it was checking for NICKNAME instead of ircbpconfig.NICKNAME
 NJ - 13/11/04 - Cleaned up some debug stuff I added when I was having trouble with the module.
+NJ - 13/11/04 - Added "DANCERMODE" so we can seperate Dancer only behaviour.  Planning to do this for other IRCds.
+NJ - 13/11/04 - Bot now supports DancerIRCd forwarding.  Fixes bug #2782 (Bot doesn't follow Dancer Forwarding)
